src/shared/components/help-tip/help-tip.css
.hw-help-tip {
    display: inline-block;
    position: relative;

    &__button {
        border: 0;
    }

    &__button::before {
        content: '\f059'; /* question-circle */
        font-family: "Font Awesome 5 Solid";
        font-weight: 900;
        display: none;
    }

    &__button:focus ~ &__content, &__button:hover ~ &__content {
        visibility: visible;
    }

    &__content {
        display: block;
        visibility: hidden;
        color: var(--hw-color-gray-lightest);
        background-color: var(--hw-color-gray-darkest);
        padding: var(--hw-spacing-smaller);
        max-width: 200px;
        width: 200px;
        position: absolute;
        bottom: 120%;
        left: 50%;
        margin-left: -100px;

        &::after{
            content: " ";
            position: absolute;
            top: 100%;
            left: 50%;
            margin-left: -5px;
            border-width: 5px;
            border-style: solid;
            border-color: var(--hw-color-gray-darkest) transparent transparent transparent;
        }
    }

  /* Placeholder  for the help tip contents */
  %left {
    left: -80px;
  }
  %left::after {
    left: 94%;
  }

  %right {
    left: 95px;
  }
  %right::after {
    left: 7%;
  }

  %middle {
    left: 50%;
  }
  %middle::after {
    left: 50%;
  }

  /* Not responsive */
  &--left &__content {
    @extend %left;
  }
  &--right &__content {
    @extend %right;
  }

  /* Responsive */
  @media (--small) {
    &--small--left &__content {
      @extend %left;
    }
    &--small--right &__content {
      @extend %right;
    }
    &--small--middle &__content {
      @extend %middle;
    }
  }

  @media (--medium) {
    &--medium--left &__content {
      @extend %left;
    }
    &--medium--right &__content {
      @extend %right;
    }
    &--medium--middle &__content {
      @extend %middle;
    }
  }

  @media (--large) {
    &--large--left &__content {
      @extend %left;
    }
    &--large--right &__content {
      @extend %right;
    }
    &--large--middle &__content {
      @extend %middle;
    }
  }

  @media (--xlarge) {
    &--xlarge--left &__content {
      @extend %left;
    }
    &--xlarge--right &__content {
      @extend %right;
    }
    &--xlarge--middle &__content {
      @extend %middle;
    }
  }
}

